syntax = "proto3";

package plugin.v1;

import "plugin/v1/plugin_type.proto";

option go_package = "github.com/go-arcade/arcade/api/plugin/v1;pluginv1";

// PluginService - Main interface for plugin communication
service PluginService {
    // Ping - Health check
    rpc Ping(PingRequest) returns (PingResponse) {}

    // GetInfo - Get plugin information
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {}

    // GetMetrics - Get plugin runtime metrics
    rpc GetMetrics(GetMetricsRequest) returns (GetMetricsResponse) {}

    // Init - Initialize plugin with configuration
    rpc Init(InitRequest) returns (InitResponse) {}

    // Cleanup - Cleanup plugin resources
    rpc Cleanup(CleanupRequest) returns (CleanupResponse) {}

    // Execute - Execute an action (unified entry point for all plugin operations)
    rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}

    // ConfigQuery - Query plugin configuration
    rpc ConfigQuery(ConfigQueryRequest) returns (ConfigQueryResponse) {}

    // ConfigQueryByKey - Query plugin configuration by key
    rpc ConfigQueryByKey(ConfigQueryByKeyRequest) returns (ConfigQueryByKeyResponse) {}

    // ConfigList - List all plugin configurations
    rpc ConfigList(ConfigListRequest) returns (ConfigListResponse) {}
}

// Ping request
message PingRequest {
    string message = 1;
}

// Ping response
message PingResponse {
    string message = 1;
}

// GetInfo request
message GetInfoRequest {
}

// GetInfo response
message GetInfoResponse {
    PluginInfo info = 1;
}

// PluginInfo contains plugin information
message PluginInfo {
    string name = 1;
    string version = 2;
    string type = 3;              // Plugin type as string (for backward compatibility)
    PluginType type_enum = 7;     // Plugin type as enum (preferred)
    string description = 4;
    string author = 5;
    string homepage = 6;
}

// PluginConfig represents the plugin runtime configuration
message PluginConfig {
    string name = 1;
    string version = 2;
    string type = 3;
    bytes config = 4;                    // JSON configuration
    map<string, string> environment = 5;  // Environment variables
    string task_id = 6;                   // Task ID for log correlation
}

// GetMetrics request
message GetMetricsRequest {
}

// GetMetrics response
message GetMetricsResponse {
    PluginMetrics metrics = 1;
}

// PluginMetrics contains plugin runtime metrics
message PluginMetrics {
    string name = 1;
    string type = 2;
    string version = 3;
    string status = 4;
    int64 uptime = 5;
    int64 call_count = 6;
    int64 error_count = 7;
    string last_error = 8;
    int64 last_call_time = 9;
    map<string, string> custom_metrics = 10;
}

// Init request
message InitRequest {
    bytes config = 1; // JSON configuration
}

// Init response
message InitResponse {
    string message = 1;
}

// Cleanup request
message CleanupRequest {
}

// Cleanup response
message CleanupResponse {
    string message = 1;
}

// Execute request
message ExecuteRequest {
    string action = 1;        // Action name (e.g., "clone", "build", "send.template")
    bytes params = 2;         // Action-specific parameters (JSON)
    bytes opts = 3;           // Optional overrides (JSON, e.g., timeout, workdir, env)
}

// Execute response
message ExecuteResponse {
    bytes result = 1;         // Action result (JSON)
    RPCError error = 2;       // Error information if execution failed
}

// RPCError represents an RPC error structure
message RPCError {
    int32 code = 1;
    string message = 2;
    string data = 3;
}

// ConfigQuery request
message ConfigQueryRequest {
    string plugin_id = 1;
}

// ConfigQuery response
message ConfigQueryResponse {
    bytes config = 1;         // JSON configuration
    RPCError error = 2;
}

// ConfigQueryByKey request
message ConfigQueryByKeyRequest {
    string plugin_id = 1;
    string key = 2;
}

// ConfigQueryByKey response
message ConfigQueryByKeyResponse {
    bytes value = 1;          // JSON value
    RPCError error = 2;
}

// ConfigList request
message ConfigListRequest {
}

// ConfigList response
message ConfigListResponse {
    bytes configs = 1;        // JSON array of configurations
    RPCError error = 2;
}

